<resources>
    <string name="app_name">山里人人</string>
    <string name="bottom_btn_1">首页</string>
    <string name="bottom_btn_2">养殖场</string>
    <string name="bottom_btn_3">购物车</string>
    <string name="bottom_btn_4">我的</string>

    <string name="fisrtpage_title_left">郑州市</string>

    <string name="farmer_title_left">全部养殖场</string>
    <string name="farmer_chose_title_1">全部分类</string>
    <string name="farmer_chose_title_2">智能排序</string>
    <string name="farmer_chose_title_3">筛选</string>

    <string name="bottom_btn_5">亲，去看看产品吧！</string>
    <string name="my_distributors">我的分销商</string>
    <string name="my_evaluation">我的评论</string>
    <string name="my_order">我的订单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_invite_friends">邀请好友</string>
    <string name="my_more">更多</string>

    <string name="shopping_editor">编辑</string>
    <string name="shopping_pay">结算</string>
    <string name="userinfo">个人资料</string>
    <string name="userface">头像</string>
    <string name="username">账号</string>
    <string name="name">姓名</string>
    <string name="balance">余额</string>
    <string name="adress">收货地址</string>
    <string name="user_signature">个性签名</string>
    <string name="message">消息中心</string>
    <string name="system_message">系统消息</string>
    <string name="logistics_message">物流消息</string>
    <string name="platform_message">平台消息</string>


    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="distributors1">一级经销商</string>
    <string name="distributors2">二级经销商</string>
    <string name="distributors3">三级经销商</string>
    <string name="evalutaions_product">商品收藏</string>
    <string name="evalutaions_farm">养殖场收藏</string>


    <string-array name="selector_1">
        <item>全部分类</item>
        <item>土鸡</item>
        <item>土鸭</item>
        <item>土鸡蛋</item>
        <item>土鸭蛋</item>
    </string-array>
    <string-array name="selector_2">
        <item>智能排序</item>
        <item>好评</item>
        <item>距离</item>
        <item>人气</item>
    </string-array>

    <string-array name="pay_style">
        <item>支付宝支付</item>
        <item>微信支付</item>
    </string-array>


    <string name="collection_product">商品收藏</string>
    <string name="collection_farm">养殖场收藏</string>
    <string name="my_collection">我的收藏</string>
    <string name="default_selector_3">设为默认</string>
    <string name="btn_see_instance">立即查看</string>
    <string name="map_title">Map</string>
    <string name="farm_camera_title">养殖场监控</string>
    <string name="farm_bottom_shop_car">购物车</string>
    <string name="buy_instance">立即购买</string>
    <string name="farm_bottom_put_in_car">加入购物车</string>
    <string name="collect">收藏</string>
    <string name="buy_count">购买数量</string>
    <string name="ensure_order_title">确认订单</string>
    <string name="order_buy_count">购买数量</string>
    <string name="devliver_style">配送方式</string>
    <string name="receive_time">收货时间</string>
    <string name="pay_style">支付方式</string>
    <string name="all_goods_prices">商品总金额</string>
    <string name="yun_fei">运费</string>
    <string name="leave_message">给卖家留言</string>
    <array name="order_titles">
        <item>全部</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
        <item>退单</item>
    </array>

    <!--   <item>待付款</item>-->


    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pay_success">支付成功</string>
    <string name="you_pay_success">你已成功支付金额</string>
    <string name="not_include_mail">(不含运费)</string>
    <string name="word_deliver">快递 免邮</string>
    <string name="i_will_comment">我要评价</string>
    <string name="tv_publish">发布</string>
    <string name="tv_forget_pwd">忘记密码？</string>
    <string name="tv_login">登录</string>
    <string name="tv_zhuce">注册</string>
    <string name="third_login">第三方登录</string>
    <string name="tv_rember_pwd">记住密码</string>
    <string name="btn_finish">完成</string>
    <string name="tv_find_pwd">找回密码</string>
    <string name="tv_next_step">下一步</string>
    <string name="goods_list">商品清单</string>


    <string name="notice_logistices_name">您购买的【%1$s】%2$s</string>
    <string name="notice_logistices_item_content">您的订单%s已发货，感谢您的支持，欢迎再次光临。期待您对本次购物进行评价。</string>

    <string name="action_settings">Settings</string>
    <string name="buffering">缓冲中</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="_drawable_mediacontroller_mute02">\@drawable/mediacontroller_mute02</string>

    <string name="player_option">播 放 选 项</string>


    <string name="app_tip">提示</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="app_cancel">取消</string>
    <string name="app_share">分享</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    <string name="receive">从微信接收</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="pay_result_callback_msg">微信支付回调</string>

</resources>
