<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.slr.slrapp.activitys.FarmerActivity">

    <RelativeLayout
        android:id="@+id/rl_title_farmerpage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/first_title_height"

        android:background="@color/title_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/city_norrow_padding"
            android:clickable="true"
            android:text="@string/farmer_title_left"
            android:textColor="@color/white"
            android:textSize="@dimen/text1" />

        <ImageView
            android:id="@+id/farmer_img_right"
            style="@style/Layout_W_W"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingRight="@dimen/layout_padding"
            android:src="@mipmap/search" />

        <ImageView
            android:id="@+id/farmer_img_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/farmer_img_right"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingRight="@dimen/layout_padding"
            android:src="@mipmap/location" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/farmer_chose_list_height"
        android:background="@color/color4"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_all_kinds"
            style="@style/farmer_select_style">

            <TextView
                android:id="@+id/select_tv_1"
                style="@style/farmer_select_text_style"
                android:text="@string/farmer_chose_title_1" />


            <ImageView
                style="@style/farmer_select_img_style"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_smart_sort"
            style="@style/farmer_select_style">

            <TextView
                android:id="@+id/select_tv_2"
                style="@style/farmer_select_text_style"
                android:text="@string/farmer_chose_title_2" />


            <ImageView
                style="@style/farmer_select_img_style"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_filter"
            style="@style/farmer_select_style">

            <TextView
                android:id="@+id/select_tv_3"
                style="@style/farmer_select_text_style"
                android:text="@string/farmer_chose_title_3" />


            <ImageView
                style="@style/farmer_select_img_style"
                />
        </RelativeLayout>


    </LinearLayout>

    <com.slr.slrapp.widget.PullToRefreshLayout
        android:id="@+id/refresh_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/refresh_head" />

        <com.slr.slrapp.widget.PullableListView
            android:id="@+id/farmer_goods_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:cacheColorHint="#00000000"

            android:divider="@color/line"
            android:dividerHeight="1dp" />

        <include layout="@layout/load_more" />

    </com.slr.slrapp.widget.PullToRefreshLayout>


</LinearLayout>
