<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.slr.slrapp.activitys.FarmCameraActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/first_title_height"
        android:background="@color/title_bg">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/layout_padding"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/farm_camera_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text1" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dots_to_right"
            android:src="@mipmap/more_3_dots"
            android:visibility="invisible" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_wait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <ListView
            android:id="@+id/lv_users_appraise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:dividerHeight="0dp"
            android:visibility="invisible"></ListView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_shop_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/drawable_pading"
            android:drawableTop="@mipmap/shop_car"
            android:gravity="center"
            android:text="@string/farm_bottom_shop_car"
            android:textColor="@color/text3"
            android:textSize="@dimen/text3" />

        <TextView
            android:id="@+id/tv_buy_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_padding"
            android:layout_marginRight="@dimen/layout_padding"
            android:layout_weight="1"
            android:background="@drawable/shape_bt2"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/buy_instance"
            android:textColor="@color/white"
            android:textSize="@dimen/text2" />

        <TextView
            android:id="@+id/tv_put_in_shop_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/drawable_pading"
            android:drawableTop="@mipmap/put_in_car"
            android:gravity="center"
            android:text="@string/farm_bottom_put_in_car"
            android:textColor="@color/text3"
            android:textSize="@dimen/text3" />
    </LinearLayout>

</LinearLayout>
