<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include layout="@layout/layout_titlebar" />

    <!-- 系统消息 -->

    <View
        android:layout_marginTop="@dimen/row_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_margin"
        android:background="@color/line"/>

    <RelativeLayout
        android:id="@+id/message_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color4"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:drawablePadding="@dimen/layout_padding"
            android:drawableLeft="@mipmap/xitong"
            android:textSize="@dimen/text2"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/system_message"

            android:textColor="@color/text1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/jinru" />

    </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_margin"
            android:background="@color/line"/>

    <RelativeLayout
        android:id="@+id/message_platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color4"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:drawablePadding="@dimen/layout_padding"
            android:drawableLeft="@mipmap/youhui"
            android:textSize="@dimen/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/platform_message"
            android:gravity="center"
            android:textColor="@color/text1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/jinru" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_margin"
        android:background="@color/line"/>

    <RelativeLayout
        android:id="@+id/message_logistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color4"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:drawablePadding="@dimen/layout_padding"
            android:drawableLeft="@mipmap/wuliu"
            android:textSize="@dimen/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/logistics_message"
            android:textColor="@color/text1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/jinru" />

    </RelativeLayout>



</LinearLayout>